fix: change moviesCardList gap on 660px

--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -15,7 +15,7 @@
   }
 }
 
-@media (max-width: 645px) {
+@media (max-width: 660px) {
   .card-list {
     margin-top: 50px;
     gap: 14px;
